--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -69,6 +69,7 @@
 {% endif %}
 <style>
   .main-information {
+    margin-bottom: 24px;
     position: relative;
     border-top: 0.5px solid var(--black);
     border-right: 0.5px solid var(--black);
