--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -27,23 +27,18 @@
         </div>
         <!--go cart modal content-->
         <div class="go-cart-modal__content js-go-cart-modal-content">
-          <div class="info-product">
-            <div>Designer</div>
-            <div>{{ item.product.metafields.custom.designer }}</div>
-          </div>
-          <div class="info-product">
-            <div>Era</div>
-            <div>{{ item.product.metafields.custom.era }}</div>
-          </div>
+
         </div>
+
         <div class="go-cart-modal__buttons">
             <a class="go-cart__button js-go-cart-modal-close">
                 Continue shopping
             </a>
             <a href="/cart/" class="go-cart__button">
-                View cart
+                View cartsss
             </a>
         </div>
+
     </div>
 </div>
 <!--go cart drawer-->
