--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -27,7 +27,7 @@
         </div>
         <!--go cart modal content-->
         <div class="go-cart-modal__content js-go-cart-modal-content">
-
+  
         </div>
 
         <div class="go-cart-modal__buttons">
@@ -35,7 +35,7 @@
                 Continue shopping
             </a>
             <a href="/cart/" class="go-cart__button">
-                View cartsss
+                View cart
             </a>
         </div>
 
