--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -9,6 +9,14 @@
         <div class="go-cart-mini-cart">
             <!--go cart mini cart content-->
             <div class="go-cart-mini-cart__content js-go-cart-mini-cart-content">
+              <div class="info-product">
+                <div>Designer</div>
+                <div>{{ item.product.metafields.custom.designer }}</div>
+              </div>
+              <div class="info-product">
+                <div>Era</div>
+                <div>{{ item.product.metafields.custom.era }}</div>
+              </div>
             </div>
             <!--end go cart mini cart content-->
             <!--go cart mini cart subtotal-->
