--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -27,12 +27,11 @@
             <!--end go cart mini cart subtotal-->
             <!--go cart mini cart buttons-->
             <div class="go-cart-mini-cart__footer js-go-cart-mini-cart-footer">
-
                 <a href="/checkout/" class="go-cart__button">
                     Proceed to checkout
                 </a>
                 <a href="/cart/" class="go-cart__button">
-                    View cart
+                   Go to cart
                 </a>
             </div>
         </div>
