--- a/assets/style.css
+++ b/assets/style.css
@@ -901,6 +901,13 @@ footer{
     text-align: center;
     cursor: pointer;
 }
+.go-cart-item__image {
+    width: 100%!important;;
+    height: 180px!important;;
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: no-repeat;
+}
 .go-cart__overlay {
   background-color: transparent!important;
 }
