--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -4,10 +4,8 @@
     <div class="baggie hov">Cart</div>
     <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
 </div>
-    <!--go cart mini cart-->
-    <div class="go-cart__mini-cart js-go-cart-mini-cart">
+<div class="go-cart__mini-cart js-go-cart-mini-cart">
         <div class="go-cart-mini-cart">
-            <!--go cart mini cart content-->
             <div class="go-cart-mini-cart__content js-go-cart-mini-cart-content">
               <div class="info-product">
                 <div>Designer</div>
@@ -18,25 +16,17 @@
                 <div>{{ item.product.metafields.custom.era }}</div>
               </div>
             </div>
-            <!--end go cart mini cart content-->
-            <!--go cart mini cart subtotal-->
             <div class="go-cart-mini-cart__subtotal">
                 <span>Subtotal: </span>
                 <span class="go-cart-mini-cart__subtotal-price js-go-cart-mini-cart-subtotal"></span>
             </div>
-            <!--end go cart mini cart subtotal-->
             <!--go cart mini cart buttons-->
             <div class="go-cart-mini-cart__footer js-go-cart-mini-cart-footer">
                 <a href="/checkout/" class="go-cart__button">
-                    Proceed to checkout
-                </a>
+                    Proceed to checkout</a>
                 <a href="/cart/" class="go-cart__button">
-                   Go to cart
-                </a>
+                    Go to cart</a>
             </div>
         </div>
-
     </div>
-    <!--end go cart mini cart-->
 </div>
-<!--end cart button-->
