--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -130,7 +130,7 @@
 {% endif %}
 {% endfor %}
 
-<!-- <script>
+<script>
   Produt functions
   var selectCallback = function(variant, selector){
     if(variant){
@@ -169,4 +169,4 @@
     {% endif %}
     {% endfor %}
   });
-</script> -->
+</script>
