--- a/assets/style.css
+++ b/assets/style.css
@@ -630,7 +630,12 @@ span.box {
   height: 100vh;
   padding: 20px!important;
 }
-
+.swiper-slide.swiper-slide-next {
+  opacity: 0;
+}
+.swiper-slide.swiper-slide-prev {
+  opacity: 0;
+}
 .swiper.relatedd {
   top: 0px;
   position: relative;
