--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -146,7 +146,7 @@ fernandoepeso.info
         </div> -->
   	 </div>
      <div class="link-about-mobile"><a href="../pages/about">About</a></div>
-     <div class="switch-view hov">Switch view</div>
+     <div class="switch-view hov">List</div>
   </div>
   </header>
   {% if template == 'index'%}
