--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -19,7 +19,7 @@
                   {% else %}
                     <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
                   {% endif %}
-                <!-- <button
+                <button
                          type="submit"
                          name="add"
                          data-add-to-cart
@@ -32,7 +32,7 @@
                         	        {{- 'products.product.sold_out' | t -}}
                         	    {%- endif -%}
                         	 </span>
-                </button> -->
+                </button>
               </div>
           </form>
           <div class="main-information">
