--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,6 +1,7 @@
 <div id="single-product">
     <div class="product_info">
       <form id="product-actions" action="/cart/add" method="post" enctype="multipart/form-data"
+      id="add-to-cart-{{ product.handle }}-{{ collection.handle }}-{{ section.id }}"
           {%- if product.has_only_default_variant -%}
           class="product-simple"
           {%- elsif variants > 1 -%}
