--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -27,7 +27,7 @@
                          class="js-go-cart-add-to-cart addtocart hov"
                          {%- unless current_variant.available -%}disabled="disabled"{%- endunless -%}>
                         	 <span data-add-to-cart-text>
-                        	    {%- if current_variant.available -%}
+                        	    {% if product.available %}
                         	        {{- 'products.product.add_to_cart' | t -}}
                         	    {%- else -%}
                         	        {{- 'products.product.sold_out' | t -}}
