--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -131,7 +131,7 @@
 {% endif %}
 {% endfor %}
 
-<!-- <script>
+<script>
   var selectCallback = function(variant, selector){
     if(variant){
       if(variant.available){
@@ -169,7 +169,7 @@
     {% endif %}
     {% endfor %}
   });
-</script> -->
+</script>
 <script>
   var goCart = new GoCart();
 </script>
