--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -16,10 +16,11 @@
                 </select>
                 <!--Actions-->
                 {% if product.available %}
-                      <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
+                    <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
                   {% else %}
                     <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
                   {% endif %}
+                        {%- include "go-cart-button" -%}
                 <button
                          type="submit"
                          name="add"
