--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -126,7 +126,7 @@ fernandoepeso.info
     </div>
     <div class="cart-part">
       {%- section 'go-cart' -%}
-
+      {%- include "go-cart-button" -%}
         <!-- <div id="cart">
           <div {% if template == 'cart' %}  class="active baggie hov" {% endif %} class="baggie hov">
               <a href="/cart">Cart</a>
