--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -65,7 +65,19 @@
                                     </div>
 
                                       {% endunless %}
+                               <a href="/cart/change?line={{ forloop.index }}&quantity=0">x Remove</a>
 
+                         <div class="item-quantity">
+                          <span data-field="updates" class="quantity-button minus"><span>–</span></span>
+                        <input type="hidden" step="1" max="9" value="{{ item.quantity }}" name="updates[]" class="inactive quantity-field align-center">
+                        <span class="quantity-wrap"></span>
+                        <span data-field="updates" class="quantity-button plus">
+                                              <span class="addmore">+</span>
+                                              {% if cart.items.available %}
+                                              {% else %}
+                                              {% endif %}
+                                 </span>
+                                 </div>
                    </div>
                        </div>
                     {% endfor %}
