--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -35,6 +35,7 @@ fernandoepeso.info
   {%- endif -%}
   {{ 'style.css'  | asset_url | stylesheet_tag }}
   {{ 'gocart.css'  | asset_url | stylesheet_tag }}
+  {{ 'gocart.js' | asset_url | script_tag }}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
