--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -1,96 +1,117 @@
 <!--go cart modal fail-->
 <div class="go-cart__modal go-cart__modal--fail js-go-cart-modal-fail">
+
     <div class="go-cart-modal">
+
+        <!--go cart modal close-->
         <div class="go-cart-modal__close js-go-cart-modal-fail-close">
-          <div id="cart">
-              <div class="baggie hov">Cart</div>
-              <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
-          </div>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                <path d="M15.89 14.696l-4.734-4.734 4.717-4.717c.4-.4.37-1.085-.03-1.485s-1.085-.43-1.485-.03L9.641 8.447 4.97 3.776c-.4-.4-1.085-.37-1.485.03s-.43 1.085-.03 1.485l4.671 4.671-4.688 4.688c-.4.4-.37 1.085.03 1.485s1.085.43 1.485.03l4.688-4.687 4.734 4.734c.4.4 1.085.37 1.485-.03s.43-1.085.03-1.485z"></path>
+            </svg>
+
         </div>
+        <!--end go cart modal close-->
+
         <!--go cart modal content-->
         <div class="go-cart-modal__content js-go-cart-modal-fail-content">
             Something went wrong, please contact us!
         </div>
         <!--end go cart modal content-->
+
     </div>
+
 </div>
+<!--end go cart modal fail-->
 
 <!--go cart modal-->
 <div class="go-cart__modal js-go-cart-modal">
+
     <div class="go-cart-modal">
+
         <!--go cart modal close-->
         <div class="go-cart-modal__close js-go-cart-modal-close">
-          <div id="cart">
-              <div class="baggie hov">Cart</div>
-              <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
-          </div>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                <path d="M15.89 14.696l-4.734-4.734 4.717-4.717c.4-.4.37-1.085-.03-1.485s-1.085-.43-1.485-.03L9.641 8.447 4.97 3.776c-.4-.4-1.085-.37-1.485.03s-.43 1.085-.03 1.485l4.671 4.671-4.688 4.688c-.4.4-.37 1.085.03 1.485s1.085.43 1.485.03l4.688-4.687 4.734 4.734c.4.4 1.085.37 1.485-.03s.43-1.085.03-1.485z"></path>
+            </svg>
+
         </div>
+        <!--end go cart modal close-->
+
         <!--go cart modal content-->
-        <div class="go-cart-modal__content js-go-cart-modal-content">
+        <div class="go-cart-modal__content js-go-cart-modal-content"></div>
+        <!--end go cart modal content-->
 
-        </div>
-
+        <!--go cart modal buttons-->
         <div class="go-cart-modal__buttons">
+
             <a class="go-cart__button js-go-cart-modal-close">
                 Continue shopping
             </a>
+
             <a href="/cart/" class="go-cart__button">
                 View cart
             </a>
+
         </div>
+        <!--end go cart modal buttons-->
 
     </div>
+
 </div>
+<!--end go cart modal-->
+
 <!--go cart drawer-->
 <div class="go-cart__drawer js-go-cart-drawer">
 
-        {% if cart.item_count > 0 %}
-        <form id="cart-wrapper" action="/cart" method="post">
-             {% for item in cart.items %}
-                  <div class="item">
-                   <div class="thumb">
-                   <img class="lazy" src="{{ item | img_url: 'thumb' }}" data-src="{{ item | img_url: 'master' }}" alt="{{ item.title | escape }}" />
-                </div>
-                <div class="info_cart">
-                              <div class="item-title">
-                                 <a class="product-title">{{ item.product.title }}</a><br>
-                                 <div> {{ item.price | money }} </div>
-                             </div>
-                            {% unless item.product.options contains 'Title' %}
-                            <!--Variations-->
-                                    <div class="item-variations">
-                                      {%- for option_title in item.product.options -%}
-                                      {{ item.variant.options[forloop.index0] }}{% unless forloop.last  %}<br> {% endunless %}
-                                      {%- endfor -%}
-                                    </div>
+    <div class="go-cart-drawer">
 
-                                      {% endunless %}
-                               <a href="/cart/change?line={{ forloop.index }}&quantity=0">x Remove</a>
+        <!--go cart drawer close-->
+        <div class="go-cart-drawer__header">
 
-                         <div class="item-quantity">
-                          <span data-field="updates" class="quantity-button minus"><span>–</span></span>
-                        <input type="hidden" step="1" max="9" value="{{ item.quantity }}" name="updates[]" class="inactive quantity-field align-center">
-                        <span class="quantity-wrap"></span>
-                        <span data-field="updates" class="quantity-button plus">
-                                              <span class="addmore">+</span>
-                                              {% if cart.items.available %}
-                                              {% else %}
-                                              {% endif %}
-                                 </span>
-                                 </div>
-                   </div>
-                       </div>
-                    {% endfor %}
+            <div class="go-cart-drawer__close js-go-cart-drawer-close">
 
-            <div class="total">
-              <div>SHIPPING</div>
-              <div style="text-align:right">Calculated at checkout</div>
-              SUBTOTAL
-              <div style="text-align:right" class="pri">{{ cart.total_price | money }}</div>
-              <input id="update-cart" type="submit" name="update" value="Update cart" style="display: none" />
-              <button id="checkout" type="submit" name="checkout">PROCEED TO CHECKOUT</button>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                    <path d="M15.89 14.696l-4.734-4.734 4.717-4.717c.4-.4.37-1.085-.03-1.485s-1.085-.43-1.485-.03L9.641 8.447 4.97 3.776c-.4-.4-1.085-.37-1.485.03s-.43 1.085-.03 1.485l4.671 4.671-4.688 4.688c-.4.4-.37 1.085.03 1.485s1.085.43 1.485.03l4.688-4.687 4.734 4.734c.4.4 1.085.37 1.485-.03s.43-1.085.03-1.485z"></path>
+                </svg>
+
             </div>
-        </form>
+
+        </div>
+        <!--end go cart drawer close-->
+
+        <!--go cart drawer content-->
+        <div class="go-cart-drawer__content js-go-cart-drawer-content"></div>
+        <!--end go cart drawer content-->
+
+        <!--go cart drawer subtotal-->
+        <div class="go-cart-drawer__subtotal">
+            <span>Subtotal: </span>
+            <span class="go-cart-drawer__subtotal-price js-go-cart-drawer-subtotal"></span>
+        </div>
+        <!--end go cart drawer subtotal-->
+
+        <!--go cart drawer buttons-->
+        <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
+
+            <a href="/checkout/" class="go-cart__button">
+                Proceed to checkout
+            </a>
+
+            <a href="/cart/" class="go-cart__button">
+                View cart
+            </a>
+
+        </div>
+        <!--end go cart drawer buttons-->
+
+    </div>
+
 </div>
+<!--end go cart drawer-->
+
+<!--go cart overlay-->
 <div class="go-cart__overlay js-go-cart-overlay">
 </div>
+<!--end go cart overlay-->
