--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -15,12 +15,12 @@
                   {% endfor %}
                 </select>
                 <!--Actions-->
-                {% if product.available %}
+                <!-- {% if product.available %}
                       <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
                   {% else %}
                     <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
-                  {% endif %}
-                <button
+                  {% endif %} -->
+                <div
                          type="submit"
                          name="add"
                          data-add-to-cart
@@ -33,7 +33,7 @@
                         	        {{- 'products.product.sold_out' | t -}}
                         	    {%- endif -%}
                         	 </span>
-                </button>
+                </div>
               </div>
           </form>
           <div class="main-information">
