--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -15,11 +15,7 @@
                   {% endfor %}
                 </select>
                 <!--Actions-->
-                {% if product.available %}
-                      <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
-                  {% else %}
-                    <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
-                  {% endif %}
+
                 <div
                          type="submit"
                          name="add"
@@ -30,7 +26,7 @@
                              {% if product.available %}
                                 <button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button>
                                {% else %}
-                              <button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button>
+                              <button id="produ" style="pointer-events:none;"{% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button>
                                {% endif %}
                 </div>
               </div>
