--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -15,20 +15,12 @@
                   {% endfor %}
                 </select>
                 <!--Actions-->
+                {% if product.available %}
+                      <div class="addtocart hov"><button class="js-go-cart-add-to-cart" id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
+                  {% else %}
+                    <div class="addtocart hov"><button class="js-go-cart-add-to-cart" id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
+                  {% endif %}
 
-                <div
-                         type="submit"
-                         name="add"
-                         data-add-to-cart
-                         class="js-go-cart-add-to-cart addtocart hov"
-                         {%- unless current_variant.available -%}disabled="disabled"{%- endunless -%}>
-                        	 <span data-add-to-cart-text>
-                             {% if product.available %}
-                                <button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button>
-                               {% else %}
-                              <button id="produ" style="pointer-events:none;"{% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button>
-                               {% endif %}
-                </div>
               </div>
           </form>
           <div class="main-information">
