--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -18,7 +18,7 @@
                 {% if product.available %}
                       <div class="addtocart hov"><button class="js-go-cart-add-to-cart" id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
                   {% else %}
-                    <div class="addtocart hov"><button class="js-go-cart-add-to-cart" id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
+                    <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
                   {% endif %}
 
               </div>
