--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -71,7 +71,7 @@
 
             <div class="go-cart-drawer__close js-go-cart-drawer-close">
   <div class="baggie hov">close</div>
-            
+
 
             </div>
 
@@ -93,7 +93,7 @@
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
 
             <a href="/checkout/" class="go-cart__button">
-                Proceed to checkout
+                Proceed to checkouttttt
             </a>
 
             <a href="/cart/" class="go-cart__button">
