--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -4,14 +4,25 @@
     {{ page.content | replace: '_16x16', '' | replace: '_32x32', '' | replace: '_50x50', '' | replace: '_100x100', '' | replace: '_160x160', '' | replace: '_240x240', '' | replace: '_480x480', '' | replace: '_600x600', '' | replace: '_1024x1024', '' }}
   </div>
 </div>
+
 <style>
   .switch-view{
     display: none;
   }
   .page_content {
     z-index: 1;
+    width: 50vw;
     grid-column: span 9;
     padding: 20px;
+    font-size: 4vw;
+    text-align: center;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+   }
+   header{
+     display:none;
    }
   .banner_main{
     overflow: hidden;
