--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -11,13 +11,13 @@
   }
   .page_content {
     z-index: 1;
-    width: 50vw;
+    width: 70vw;
     grid-column: span 9;
     padding: 20px;
-    font-size: 4vw;
+    font-size: 14px;
     text-align: center;
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
    }
