--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -4,7 +4,7 @@
     {{ page.content | replace: '_16x16', '' | replace: '_32x32', '' | replace: '_50x50', '' | replace: '_100x100', '' | replace: '_160x160', '' | replace: '_240x240', '' | replace: '_480x480', '' | replace: '_600x600', '' | replace: '_1024x1024', '' }}
   </div>
 </div>
-
+<div class="back link hov">Back</div>
 <style>
   .switch-view{
     display: none;
