--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -1,11 +1,11 @@
 <!--Content-->
+<div id="products">
+  <div class="back link hov">Back</div>
+</div>
 <div class="main-page">
   <div class="page_content">
     {{ page.content | replace: '_16x16', '' | replace: '_32x32', '' | replace: '_50x50', '' | replace: '_100x100', '' | replace: '_160x160', '' | replace: '_240x240', '' | replace: '_480x480', '' | replace: '_600x600', '' | replace: '_1024x1024', '' }}
   </div>
-</div>
-<div class="products">
-  <div class="back link hov">Back</div>
 </div>
 <style>
   .switch-view{
@@ -43,4 +43,8 @@
     background-color: var(--black);
     color: var(--white);
   }
+  .back{
+    height: fit-content;
+  }
+
 </style>
