--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -1,6 +1,6 @@
 <!--Content-->
 <div id="products">
-  <div class="back link hov">Back</div>
+  <div class="back link hov"><a onclick="history.back()">Back</a></div>
 </div>
 <div class="main-page">
   <div class="page_content">
