--- a/assets/style.css
+++ b/assets/style.css
@@ -54,8 +54,6 @@
   --white: #f1f2f2;
   --offwhite: #FAF8F6;
   --black: #282829;
-  --font-main: 'GH_LittleSpain-Regular';
-  --font-secondary: 'AntiqueLegacy-Medium';
 }
 /* MAIN
 ================================================== */
@@ -167,6 +165,14 @@ select:disabled{
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+    font-family: 'BastardoGrotesk-Regular';
+    src: url('BastardoGrotesk-Regular.woff2') format('woff2');
+    src: url('BastardoGrotesk-Regular.woff') format('woff');
+  	font-weight: normal;
+    font-style: normal;
+  	font-display: swap;
+}
 
 ::-webkit-scrollbar{
   display: none;
@@ -199,7 +205,7 @@ select:disabled{
 
 body{
  font-size: 10px;
- font-family: 'ABCArizonaSans-Bold';
+ font-family: 'BastardoGrotesk-Regular';
  display: flex;
  background-color: var(--white);
  flex-direction: column;
