--- a/assets/style.css
+++ b/assets/style.css
@@ -121,7 +121,8 @@ select{
   -moz-border-radius: 0;
   border-radius: 0;
   border: 0;
-  font-size:10px!important;
+  font-size:12px!important;
+  line-height: 12px;
   color: inherit;
   background: transparent;
   background-color: transparent;
