--- a/assets/style.css
+++ b/assets/style.css
@@ -123,7 +123,7 @@ select{
   border: 0;
   font-size:12px!important;
   line-height: 12px;
-  
+
   color: inherit;
   background: transparent;
   background-color: transparent;
@@ -409,6 +409,7 @@ header{
   padding-left: 5px!important;
   border-bottom:0.5px solid black;
   padding: 2px;
+  padding-top: 4px!important;;
   cursor: pointer;
   width: 100%;
 }
