--- a/assets/style.css
+++ b/assets/style.css
@@ -109,7 +109,6 @@ input,
 button,
 select{
   padding-bottom: 0px!important;
-  font-family: 'ABCArizonaSans-Bold';
   font-size: 100%;
   padding: 0;
   margin: 0;
@@ -123,7 +122,6 @@ select{
   border: 0;
   font-size:12px!important;
   line-height: 12px;
-
   color: inherit;
   background: transparent;
   background-color: transparent;
@@ -214,6 +212,8 @@ body{
  min-height: 100vh;
  width: 100%;
  height: 100%;
+ font-size:12px!important;
+ line-height: 12px;
  margin: auto;
  font-smoothing: antialiased;
  -webkit-font-smoothing: antialiased;
