--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -22,9 +22,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    line-height: 17px;
    }
    header{
-     display:none;
+    display:none;
    }
   .banner_main{
     overflow: hidden;
@@ -35,9 +36,9 @@
     width: 100%;
   }
   .banner_main img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   .link-about{
     background-color: var(--black);
@@ -46,5 +47,4 @@
   .back{
     height: fit-content;
   }
-
 </style>
