--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -89,15 +89,12 @@
 
         <!--go cart drawer buttons-->
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
-
-            <a href="/checkout/" class="go-cart__button">
-                Proceed to checkouttttt
+            <a id="checkout"  href="/checkout/" class="go-cart__button">
+                Proceed to checkout
             </a>
-
-            <a href="/cart/" class="go-cart__button">
+            <a id="checkout" href="/cart/" class="go-cart__button">
                 View cart
             </a>
-
         </div>
         <!--end go cart drawer buttons-->
 
