--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -59,14 +59,26 @@
     </div>
 
 </div>
+<!--end go cart modal-->
 
+<!--go cart drawer-->
 <div class="go-cart__drawer js-go-cart-drawer">
+
     <div class="go-cart-drawer">
+
+        <!--go cart drawer close-->
         <div class="go-cart-drawer__header">
+
             <div class="go-cart-drawer__close js-go-cart-drawer-close">
-                <div class="baggie hov">close</div>
+  <div class="baggie hov">close</div>
+
+
             </div>
+
         </div>
+        <!--end go cart drawer close-->
+
+        <!--go cart drawer content-->
         <div class="go-cart-drawer__content js-go-cart-drawer-content"></div>
 
         <div class="go-cart-drawer__subtotal">
@@ -77,12 +89,14 @@
 
         <!--go cart drawer buttons-->
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
-            <a id="checkout"  href="/checkout/" class="go-cart__button">
+            <a href="/checkout/" class="go-cart__button">
                 Proceed to checkout
             </a>
-            <a id="checkout" href="/cart/" class="go-cart__button">
+
+            <a href="/cart/" class="go-cart__button">
                 View cart
             </a>
+
         </div>
         <!--end go cart drawer buttons-->
 
