--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -7,33 +7,20 @@
           {%- elsif variants > 1 -%}
           class="product-variants"
           {%- endif -%}>
-              <div id="bag">
-                <!--Variations Dropdown-->
-                <select id="product-select" name="id">
-                  {% for variant in product.variants %}
-                  <option value="{{ variant.id }}">{{ variant.title | upcase }}</option>
-                  {% endfor %}
-                </select>
-                <!--Actions-->
-                {% if product.available %}
-                      <div class="js-go-cart-add-to-cart addtocart hov">ADD TO CART</div>
-                  {% else %}
-                    <div class="js-go-cart-add-to-cart addtocart hov">SOLD OUT</div>
-                  {% endif %}
-              </div>
+      
               <button
  type="submit"
  name="add"
  data-add-to-cart
  {%- unless current_variant.available -%}disabled="disabled" {%- endunless -%}>
 	 <span data-add-to-cart-text>
-	    {%- if current_variant.available -%}
+	    {%- if product.available  -%}
                 {{- 'products.product.add_to_cart' | t -}}
 	    {%- else -%}
                 {{- 'products.product.sold_out' | t -}}
 	    {%- endif -%}
 	 </span>
-</button> 
+</button>
           </form>
 
           <div class="main-information">
