--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -7,7 +7,7 @@
                 {%- elsif variants > 1 -%}
                 class="product-variants"
                 {%- endif -%}>
-              <div
+              <button
                 class="bag"
                 type="submit"
                 name="add"
@@ -20,7 +20,7 @@
                     <div class="js-go-cart-add-to-cart addtocart hov">SOLD OUT</div>
                     {% endif %}
   	             </div>
-             </div>
+             </button>
           </form>
 
           <div class="main-information">
