--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -13,12 +13,11 @@
                 name="add"
                 class="js-go-cart-add-to-cart"
                 data-add-to-cart
-                {%- unless current_variant.available -%}disabled="disabled" {%- endunless -%}>
   	             <div data-add-to-cart-text>
                     {% if product.available %}
-                    <div class="addtocart hov">ADD TO CART</div>
+                    <div class="hov">ADD TO CART</div>
                     {% else %}
-                    <div class="addtocart hov">SOLD OUT</div>
+                    <div class="hov">SOLD OUT</div>
                     {% endif %}
   	             </div>
              </button>
