--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,28 +1,41 @@
 <div id="single-product">
     <div class="product_info">
       <form id="product-actions" action="/cart/add" method="post" enctype="multipart/form-data"
-            id="add-to-cart-{{ product.handle }}-{{ collection.handle }}-{{ section.id }}"
-                {%- if product.has_only_default_variant -%}
-                class="product-simple"
-                {%- elsif variants > 1 -%}
-                class="product-variants"
-                {%- endif -%}>
-              <button
-                class="bag"
-                type="submit"
-                name="add"
-                class="js-go-cart-add-to-cart"
-                data-add-to-cart
-  	             <div data-add-to-cart-text>
-                    {% if product.available %}
-                    <div class="hov">ADD TO CART</div>
-                    {% else %}
-                    <div class="hov">SOLD OUT</div>
-                    {% endif %}
-  	             </div>
-             </button>
+      id="add-to-cart-{{ product.handle }}-{{ collection.handle }}-{{ section.id }}"
+          {%- if product.has_only_default_variant -%}
+          class="product-simple"
+          {%- elsif variants > 1 -%}
+          class="product-variants"
+          {%- endif -%}>
+              <div id="bag">
+                <!--Variations Dropdown-->
+                <select id="product-select" name="id">
+                  {% for variant in product.variants %}
+                  <option value="{{ variant.id }}">{{ variant.title | upcase }}</option>
+                  {% endfor %}
+                </select>
+                <!--Actions-->
+                {% if product.available %}
+                      <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
+                  {% else %}
+                    <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
+                  {% endif %}
+                <button
+                         type="submit"
+                         name="add"
+                         data-add-to-cart
+                         class="js-go-cart-add-to-cart addtocart hov"
+                         {%- unless current_variant.available -%}disabled="disabled"{%- endunless -%}>
+                        	 <span data-add-to-cart-text>
+                        	    {%- if current_variant.available -%}
+                        	        {{- 'products.product.add_to_cart' | t -}}
+                        	    {%- else -%}
+                        	        {{- 'products.product.sold_out' | t -}}
+                        	    {%- endif -%}
+                        	 </span>
+                </button>
+              </div>
           </form>
-
           <div class="main-information">
             <div class="info-product">
               <div>Designer</div>
@@ -92,7 +105,6 @@
     </div>
     {% include 'related' %}
 </div>
-
 <style>
   .thumb {
     grid-column: auto!important;
