--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -2,7 +2,7 @@
 <div class="go-cart__trigger js-go-cart-trigger">
 <div id="cart">
     <div class="baggie hov">Cart</div>
-    <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
+    <div class="js-go-cart-counter">{{- cart.item_count -}}</div>
 </div>
 <div class="go-cart__mini-cart js-go-cart-mini-cart">
         <div class="go-cart-mini-cart">
