--- a/assets/style.css
+++ b/assets/style.css
@@ -941,11 +941,18 @@ footer{
     cursor: pointer;
 }
 .go-cart-item__image {
-    width: 100%!important;;
-    height: 180px!important;;
+    width: 100%!important;
+    height: 180px!important;
     background-size: cover;
     background-position: 50%;
     background-repeat: no-repeat;
+}
+.go-cart-item__single {
+    position: relative;
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    padding: 0px 0!important;;
+    border-bottom: 0px solid #f5f5f5!important;;
 }
 .go-cart__overlay {
   background-color: transparent!important;
