--- a/assets/style.css
+++ b/assets/style.css
@@ -1006,6 +1006,7 @@ footer{
     padding: 20px 10px;
     text-align: center;
     cursor: pointer;
+    margin-bottom: 5px;
 }
 .go-cart-drawer__footer {
     flex-direction: column;
