--- a/assets/style.css
+++ b/assets/style.css
@@ -1003,7 +1003,7 @@ footer{
     background: var(--white)!important;
     color: var(--black)!important;
     padding: 3px 2px 2px 2px!important;
-    padding: 20px 10px;
+    padding: 0px 0px!important;;
     text-align: center;
     cursor: pointer;
     margin-bottom: 5px;
@@ -1011,7 +1011,7 @@ footer{
 .go-cart-drawer__footer {
     flex-direction: column;
     height: auto!important;
-    padding: 20px!important;
+    padding: 0px!important;
 }
 .item-title{
   grid-column:span 3;
