--- a/assets/style.css
+++ b/assets/style.css
@@ -446,8 +446,7 @@ header{
     height: 100%;
 }
 .go-cart-item__price {
-    position: relative;
-    right: 0;
+    position: relative!important;
 }
 .baggie{
   width: 100%;
