--- a/assets/style.css
+++ b/assets/style.css
@@ -908,10 +908,17 @@ footer{
     padding: 0px!important;
     -webkit-transition:none;
 }
+
 .go-cart-drawer__subtotal {
-    align-items: center;
-    height: auto!important;
-    padding: 0px!important;
+      display: grid!important;;
+      grid-gap: 12px!important;;
+      grid-template-columns: repeat(4,1fr)!important;;
+      border: 0.5px solid!important;
+      justify-content: unset!important;;
+      width: 100%!important;;
+      -webkit-transition: all .3s ease-in-out;
+      transition: all .3s ease-in-out;
+  }
 }
 
 .go-cart__drawer {
