--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -82,7 +82,7 @@
         <div class="go-cart-drawer__content js-go-cart-drawer-content"></div>
 
         <div class="go-cart-drawer__subtotal">
-            <span>Subtotal: </span>
+            <span>Subtotal </span>
             <span class="go-cart-drawer__subtotal-price js-go-cart-drawer-subtotal"></span>
         </div>
         <!--end go cart drawer subtotal-->
@@ -90,11 +90,11 @@
         <!--go cart drawer buttons-->
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
             <a href="/checkout/" class="go-cart__button">
-                Proceed to checkout
+              PROCEED TO CHECKOUT
             </a>
 
             <a href="/cart/" class="go-cart__button">
-                View cart
+                GO TO CART
             </a>
 
         </div>
