--- a/assets/style.css
+++ b/assets/style.css
@@ -440,10 +440,9 @@ header{
   justify-content: space-between;
 }
 .go-cart-drawer {
-    padding: 20px!important;
-    padding-left: 12px!important;
     position: relative;
     height: 100%;
+    padding: 0px 20px 20px 12px!important;
 }
 .go-cart-item__price {
     position: auto!important;
